outputs/training_eval_attempt.txt
  File "/Users/hilbert/Desktop/stdpbrian/run_training_eval.py", line 44
    except Exception as e:
                          ^
IndentationError: unindent does not match any outer indentation level
